// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render icon with color prop 1`] = `
<div>
  <i
    class="ucee-icon ucee-icon-my"
    style="color: rgb(255, 153, 0);"
  />
</div>
`;

exports[`Icon should render icon with size prop 1`] = `
<div>
  <i
    class="ucee-icon ucee-icon-my"
    style="font-size: 30px;"
  />
</div>
`;
